--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="formulario">
       <form action="">
-        <input type="email" placeholder="Your email addres">
+        <input type="email" placeholder="Your email addres...">
         <button type="submit">Notify Me</button>
       </form>
     </div>
