--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
 
   <div class="imagen">
-    <img src="images/illustration-dashboard.png" alt="ilustracion">
+    <img class="dashboard" src="images/illustration-dashboard.png" alt="ilustracion">
   </div>
   
 
