--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
   
 
   <section class="bot">
-    <div class="facebook">
-      <img src="images/facebook-f-brands.svg" alt="facebook">
+    <div class="">
+      <img class="facebook" src="images/facebook.svg" alt="facebook">
     </div>
 
-    <div class="twitter">
-      <img src="images/twitter-brands.svg" alt="twitter">
+    <div >
+      <img class="twitter" src="images/twitter.svg" alt="twitter">
     </div>
 
-    <div class="instagram">
-      <img src="images/instagram-brands.svg" alt="instagram">
+    <div >
+      <img class="instagram" src="images/instagram.svg" alt="instagram">
     </div>
   </section>
   
