--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
 
   <section class="bot">
     <div class="">
-      <img class="facebook" src="images/facebook.svg" alt="facebook">
+      <a class="link-f" href="#"><img class="facebook" src="images/facebook.svg" alt="facebook"></a>
     </div>
 
     <div >
-      <img class="twitter" src="images/twitter.svg" alt="twitter">
-    </div>
+      <a class="link-t" href="#"><img class="twitter" src="images/twitter.svg" alt="twitter">
+    </div></a>
 
     <div >
-      <img class="instagram" src="images/instagram.svg" alt="instagram">
+      <a class="link-i" href="#"><img class="instagram" src="images/instagram.svg" alt="instagram"></a>
     </div>
   </section>
   
-
-  <span class="copyright">&copy; Copyright Ping. All rights reserved.</span>
+  <footer>
+    <span class="copyright">&copy; Copyright Ping. All rights reserved</span>
+  </footer>
+  
   
 
 </body>
